@@ -11,6 +11,10 @@ Package author: Chunhong "Chuck" Yoon
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-20
+2016-06-17 Chunhong Yoon
+- Added hybrid gain for cspad types
+
 Tag: V00-01-19
 2016-06-15 Chunhong Yoon
 - Bug fix: use clen only at CXI
